Rename root namespace to DesignPatterns

--- a/DesignPatterns.csproj
+++ b/DesignPatterns.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Design_Patterns</RootNamespace>
+    <RootNamespace>DesignPatterns</RootNamespace>
   </PropertyGroup>
 
 </Project>
