Move to separate directory

--- a/Design-Patterns/DesignPatterns.csproj
+++ b/Design-Patterns/DesignPatterns.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>DesignPatterns</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DesignPatterns.SOLID\DesignPatterns.SOLID.csproj" />
+  </ItemGroup>
+
 </Project>
